# FastAPI-Practice

./: .env.sample  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 1eb6b07d07d5_create_patients_table.py  306d30f1b166_sqlmodel_create.py  87cc8010568e_update_table_max_length.py  b8f03dea230d_first_create_tables.py  c24d27d71cc9_creata_many_tables.py
app/: databases.py  main.py
app/databases/: models.py  session.py
app/s1/models/: users.py
app/s1/repositories/: users.py
app/s1/routes/: users.py
app/s1/schemas/: users.py
app/s2/models/: patient.py
app/s2/routes/: auth.py  mail.py  minio.py  patients.py  returns.py
docker/: docker-compose.yml
docker/nginx/: Dockerfile  default.conf
docker/python/: Dockerfile
src/: alembic.ini  log_config.yml  pyproject.toml
src/app/: main.py
src/app/config/: databases.py  env.py
src/app/models/: users.py
src/app/s1/routes/: login.py  patients.py  users.py
src/app/s1/usecases/: userServices.py
src/migrations/: env.py
src/migrations/versions/: 807b7297a1d9_first_create_tables.py
