[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI ディレクトリ構成の練習"
authors = ["a-yoshimatsu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["all"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
