[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI ディレクトリ構成の練習"
authors = ["a-yoshimatsu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["all"], version = "^0.27.0.post1"}
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
boto3 = "^1.34.36"
boto3-stubs = {extras = ["s3"], version = "^1.34.36"}
returns = "^0.22.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
