[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
pymysql = "^1.1.0"
cryptography = "^42.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
